rutas de productos con middleware actualizados, rutas swagger actualizadas
